<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:paddingTop="10dp"
        android:text="@string/HEIGHT"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/height"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/height" />

    <EditText
        android:id="@+id/height"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginTop="112dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_height_cm"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="85dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:paddingTop="10dp"
        android:text="@string/weight"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/weight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/enter_your_weight_kg"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <Button
        android:id="@+id/calculatebmi"
        android:layout_width="262dp"
        android:layout_height="43dp"
        android:layout_marginTop="64dp"
        android:background="#D700BCD4"
        android:text="@string/calculate_bmi"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/weight"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <TextView
        android:id="@+id/bmires2"
        android:layout_width="382dp"
        android:layout_height="63dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmires1"
        tools:text="SEVERLY OVERWEIGHT" />

    <TextView
        android:id="@+id/bmires1"
        android:layout_width="122dp"
        android:layout_height="39dp"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculatebmi"
        tools:text="12.76" />

</androidx.constraintlayout.widget.ConstraintLayout>